feat: added hero

--- a/apps/web/styles/background.module.css
+++ b/apps/web/styles/background.module.css
@@ -9,7 +9,7 @@
   position: relative;
   display: flex;
   justify-content: center;
-  padding: 60px 24px 160px 24px;
+  padding: 24px;
 }
 
 .main:before {
