--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -10,11 +10,11 @@
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 215 98% 61%;
+    --primary: 221 83% 53%;
     --primary-foreground: 0 0% 98%;
-    --secondary: 256 98% 72%;
+    --secondary: 221 83% 53%;
     --secondary-foreground: 0 0% 98%;
-    --tertiary: 222 67% 73%;
+    --tertiary: 221 83% 53%;
     --tertiary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
@@ -28,6 +28,7 @@
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
     --radius: 0.3rem;
+    --success: 144 61% 20%;
   }
 
   [data-theme="dark"] {
@@ -54,5 +55,6 @@
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
     --ring: 0 0% 83.1%;
+    --success: 142 69% 58%;
   }
 }
